--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class='navigation'>
             <a href="#serivce">Serivce</a>
             <a href="#projects">Projects</a>
-            <a href="#certificate" class="certificate">certif</a>
+            <a href="#certificate" class="certificate">certificate</a>
             <a href="#contact">Contact</a>
             
 
